Closed Bug 328232 Opened 18 years ago Closed 18 years ago

Images with alpha are broken for X

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: roc, Assigned: roc)

Details

Attachments

(1 file, 2 obsolete files)

As discussed on IRC, gfxPlatformGtk::CreateOffscreenSurface isn't doing the right thing. Patch forthcoming.
Attached patch fix (obsolete) — Splinter Review
Attachment #212805 - Flags: review?(vladimir)
Attached patch updated fix (obsolete) — Splinter Review
Sorry vlad, that patch wasn't good. We need to get the bpp from the xrender format.
Attachment #212805 - Attachment is obsolete: true
Attachment #212818 - Flags: review?
Attached patch updated fixSplinter Review
Sorry vlad, that patch wasn't good. We need to get the bpp from the xrender format.
Attachment #212819 - Flags: review?(vladimir)
Attachment #212818 - Attachment is obsolete: true
Attachment #212818 - Flags: review?
(and we need to unset the gdk colormap, or I get tons of assertion spew)
Comment on attachment 212819 [details] [diff] [review]
updated fix

bleh, every time I think I understand what X is doing, it does something weird.  RENDER and everything else is just a mess.
Attachment #212819 - Flags: review?(vladimir) → review+
Yeah, it sucks hugely. We might be able to simplify life a little if we get rid of the need for the surface to have an associated GdkDrawable ... then perhaps we can get Gdk out of the loop entirely and only have to wrangle X11 and RENDER.
(and make this gfxPlatformX)
checked in
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: