Bug 328232. Fix CreateOffscreenSurface to actually create a surface with alpha if it's asked to. r=vlad